--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="#Literals" class="nav-link">Literals</a></li>
         <li><a href="#Statements" class="nav-link">Statements</a></li>
         <li><a href="#Loops" class="nav-link">Loops</a></li>
+        <li><img src="/images/ruby.png" alt="" /></li>
       </ul>
     </nav>
     <!-- Main Section -->
@@ -31,9 +32,9 @@
           1993 by Yukihiro Matsumoto of Japan.
         </p>
         <p>
-          Ruby is "A Programmer's Best Friend". Ruby has features that are
-          similar to those of Smalltalk, Perl, and Python. Perl, Python, and
-          Smalltalk are scripting languages.
+          Ruby is <strong>"A Programmer's Best Friend"</strong>. Ruby has
+          features that are similar to those of Smalltalk, Perl, and Python.
+          Perl, Python, and Smalltalk are scripting languages.
         </p>
         <p>
           Smalltalk is a true object-oriented language. Ruby, like Smalltalk, is
@@ -57,9 +58,11 @@
         <header><h2>Remember This</h2></header>
 
         <h3>Extension:</h3>
-        <p>Ruby file Extension: <strong>.rb</strong></p>
+        <p>
+          Ruby file Extension:<strong style="padding-left: 10px">.rb</strong>
+        </p>
 
-        <h3>Whitespace:</h3>
+        <h3>Whitespace</h3>
         <p>
           Whitespace characters such as spaces and tabs are generally ignored in
           Ruby code, except when they appear in strings.
@@ -67,7 +70,7 @@
         <code>a + b is interpreted as a+b ( Here a is a local variable)</code>
         <code>a +b is interpreted as a(+b) ( Here a is a method call)</code>
 
-        <h3>Line Endings:</h3>
+        <h3>Line Endings</h3>
         <p>
           Ruby interprets semicolons and newline characters as the ending of a
           statement.
@@ -77,7 +80,7 @@
           the end of a line, they indicate the continuation of a statement.
         </p>
 
-        <h3>Identifiers:</h3>
+        <h3>Identifiers</h3>
         <p>Identifiers are names of variables, constants, and methods.</p>
         <p>Ruby identifiers are case sensitive.</p>
         <p>It means Ram and RAM are two different identifiers in Ruby.</p>
@@ -114,27 +117,29 @@
         </p>
 
         <h3>Local Varibales</h3>
-        <p>Local variables begin with a lowercase letter or _.</p>
         <p>
-          The scope of a local variable ranges from class, module, def, or do to
-          the corresponding end or from a block's opening brace to its close
-          brace {}.
-        </p>
-        <p>
-          When an uninitialized local variable is referenced, it is interpreted
-          as a call to a method that has no arguments.
-        </p>
-        <p>
-          Assignment to uninitialized local variables also serves as variable
-          declaration.
-        </p>
-        <p>
-          The variables start to exist until the end of the current scope is
-          reached.
-        </p>
-        <p>
-          he lifetime of local variables is determined when Ruby parses the
-          program.
+          <li>Local variables begin with a lowercase letter or _.</li>
+          <li>
+            The scope of a local variable ranges from class, module, def, or do
+            to the corresponding end or from a block's opening brace to its
+            close brace {}.
+          </li>
+          <li>
+            When an uninitialized local variable is referenced, it is
+            interpreted as a call to a method that has no arguments.
+          </li>
+          <li>
+            Assignment to uninitialized local variables also serves as variable
+            declaration.
+          </li>
+          <li>
+            The variables start to exist until the end of the current scope is
+            reached.
+          </li>
+          <li>
+            he lifetime of local variables is determined when Ruby parses the
+            program.
+          </li>
         </p>
         <div>
           <code>math = 100</code>
@@ -146,7 +151,7 @@
       <section class="main-section" id="Literals">
         <header><h2>Literals</h2></header>
 
-        <h3>Integers:</h3>
+        <h3>Integers</h3>
         <p>Ruby supports integer numbers.</p>
         <p>
           An integer number can range from -2<sup>30</sup> to 2<sup>30</sup>-1
@@ -157,14 +162,14 @@
           <code>-500</code>
         </div>
 
-        <h3>Floats:</h3>
+        <h3>Floats</h3>
         <p>Ruby supports floating numbers.</p>
         <p>hey are also numbers but with decimals.</p>
         <div>
           <code>124.4</code>
         </div>
 
-        <h3>Strings:</h3>
+        <h3>Strings</h3>
         <p>
           Ruby strings are simply sequences of 8-bit bytes and they are objects
           of class String.
@@ -176,7 +181,7 @@
         </p>
         <div>
           <code>puts 'escape using "\\"';</code>
-          <code>'That\'s right';</code>
+          <code>puts 'That\'s right';</code>
         </div>
         <h4>Result:</h4>
         <div>
@@ -288,12 +293,16 @@
           <code>1</code>
           <code>2</code>
         </div>
+
         <p id="learn">
-          To Learn Elaborately
-          <a href="https://www.tutorialspoint.com/ruby/ruby_quick_guide.htm"
+          This is a very basic documentation, To learn elaborately
+          <a
+            href="https://www.tutorialspoint.com/ruby/ruby_quick_guide.htm"
+            target="_blank"
             >click here!</a
           >
         </p>
+        <img src="/images/ruby.png" alt="" />
       </section>
     </main>
     <!-- Script -->
